--- a/src/vscp/vscpworks/vscpworks.vcxproj
+++ b/src/vscp/vscpworks/vscpworks.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Release|Win32">
       <Configuration>Release</Configuration>
@@ -21,14 +21,14 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <Configuration>Debug</Configuration>
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -42,15 +42,15 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir).\Release\\</OutDir>
-    <IntDir>$(SolutionDir)VCProjectRelease\</IntDir>
-    <IncludePath>$(VSCP_HOME)/src/common;$(VSCP_HOME)/src/vscp/common;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;</IncludePath>
+    <OutDir>$(ProjectDir)\Release\</OutDir>
+    <IntDir>$(ProjectDir)\Release\</IntDir>
+    <IncludePath>$(VSCP_HOME)/src/common;$(VSCP_HOME)/src/vscp/common;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)vscpworks/Debug\</OutDir>
     <IntDir>$(SolutionDir)VCProjectDebug\</IntDir>
-    <IncludePath>$(VSCP_HOME)/src/common;$(VSCP_HOME)/src/vscp/common;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;</IncludePath>
+    <IncludePath>$(VSCP_HOME)/src/common;$(VSCP_HOME)/src/vscp/common;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -59,19 +59,28 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>USE_FOSSA;NS_ENABLE_SSL;NOPCH;WIN32;__WXMSW__;_WINDOWS;_UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>USE_FOSSA;NS_ENABLE_SSL;_CRT_SECURE_NO_WARNINGS;NOPCH;WIN32;__WXMSW__;_WINDOWS;_UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions> %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>.\;$(OPENSSL)\include;C:\wxWidgets-3.0.2/lib/vc_lib/mswu;C:\wxWidgets-3.0.2/include;C:\wxWidgets-3.0.2/contrib/include;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\include;c:\Program Files (x86)\Microsoft Visual Studio 10.0\vc\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\;$(OPENSSL)\include;$(WXWIN)/lib/vc_lib/mswu;$(WXWIN)/include;$(WXWIN)/contrib/include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <PrecompiledHeaderOutputFile>$(ProjectDir)\Release\$(TargetName).pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>$(ProjectDir)\Release\</AssemblerListingLocation>
+      <ObjectFileName>$(ProjectDir)\Release\</ObjectFileName>
+      <ProgramDataBaseFileName>$(ProjectDir)\Release\vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
+      <XMLDocumentationFileName>$(ProjectDir)\Release\</XMLDocumentationFileName>
+      <BrowseInformationFile>$(ProjectDir)\Release\</BrowseInformationFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;C:\OpenSSL-Win32\lib\VC;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\lib;c:\Program Files (x86)\Microsoft Visual Studio 10.0\vc\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(WXWIN)\lib\vc_lib;C:\OpenSSL-Win32\lib\VC</AdditionalLibraryDirectories>
       <AdditionalDependencies>ssleay32MTd.lib;wxmsw30u_xrc.lib;wxmsw30u_richtext.lib;wxmsw30u_aui.lib;wxmsw30u_html.lib;wxmsw30u_stc.lib;wxmsw30u_propgrid.lib;wxmsw30u_ribbon.lib;wxmsw30u_core.lib;wxbase30u.lib;wxtiff.lib;wxjpeg.lib;wxpng.lib;wxzlib.lib;wxregexu.lib;wxmsw30u_adv.lib;wxmsw30u_html.lib;wxmsw30u_xrc.lib;wxbase30u_net.lib;wxbase30u_xml.lib;wxexpat.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <TargetMachine>MachineX86</TargetMachine>
+      <OutputFile>$(ProjectDir)\Release\$(TargetName)$(TargetExt)</OutputFile>
+      <ProgramDatabaseFile>$(ProjectDir)\Release\$(TargetName).pdb</ProgramDatabaseFile>
+      <ProfileGuidedDatabase>$(ProjectDir)\Release\$(TargetName).pgd</ProfileGuidedDatabase>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>C:\wxWidgets-3.0.2/lib/vc_lib/mswu;C:\wxWidgets-3.0.2/include;C:\wxWidgets-3.0.2/contrib/include;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\include;c:\Program Files (x86)\Microsoft Visual Studio 10.0\vc\include</AdditionalIncludeDirectories>
@@ -85,15 +94,25 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>USE_FOSSA;NS_ENABLE_SSL;_CRT_SECURE_NO_WARNINGS;NOPCH;WIN32;__WXMSW__;_WINDOWS;__WXDEBUG__;_DEBUG;_UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions> %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>.\;$(OPENSSL)\include;C:\wxWidgets-3.0.2/lib/vc_lib/mswud;C:\wxWidgets-3.0.2/include;C:\wxWidgets-3.0.2/contrib/include;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\include;c:\Program Files (x86)\Microsoft Visual Studio 10.0\vc\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\;$(OPENSSL)\include;$(WXWIN)/lib/vc_lib/mswud;$(WXWIN)/include;$(WXWIN)/contrib/include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <PrecompiledHeaderOutputFile>$(ProjectDir)\Debug\$(TargetName).pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>$(ProjectDir)\Debug\</AssemblerListingLocation>
+      <ObjectFileName>$(ProjectDir)\Debug\</ObjectFileName>
+      <ProgramDataBaseFileName>$(ProjectDir)\Debug\vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
+      <XMLDocumentationFileName>$(ProjectDir)\Debug\</XMLDocumentationFileName>
+      <BrowseInformationFile>$(ProjectDir)\Debug\</BrowseInformationFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;C:\OpenSSL-Win32\lib\VC;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\lib;c:\Program Files (x86)\Microsoft Visual Studio 10.0\vc\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>ssleay32MTd.lib;wxmsw30ud_xrc.lib;wxmsw30ud_richtext.lib;wxmsw30ud_aui.lib;wxmsw30ud_html.lib;wxmsw30ud_stc.lib;wxmsw30ud_propgrid.lib;wxmsw30ud_ribbon.lib;wxmsw30ud_core.lib;wxbase30ud.lib;wxtiffd.lib;wxjpegd.lib;wxpngd.lib;wxzlibd.lib;wxregexud.lib;wxmsw30ud_adv.lib;wxmsw30ud_html.lib;wxmsw30ud_xrc.lib;wxbase30ud_net.lib;wxbase30ud_xml.lib;wxexpatd.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(WXWIN)\lib\vc_lib;C:\OpenSSL-Win32\lib\VC</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ssleay32MTd.lib;wxmsw30ud_xrc.lib;wxmsw30ud_richtext.lib;wxmsw30ud_aui.lib;wxmsw30ud_html.lib;wxmsw30ud_stc.lib;wxmsw30ud_propgrid.lib;wxmsw30ud_ribbon.lib;wxmsw30ud_core.lib;wxbase30ud.lib;wxtiffd.lib;wxjpegd.lib;wxpngd.lib;wxzlibd.lib;wxregexud.lib;wxmsw30ud_adv.lib;wxbase30ud_net.lib;wxbase30ud_xml.lib;wxexpatd.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <TargetMachine>MachineX86</TargetMachine>
+      <OutputFile>$(ProjectDir)\Debug\$(TargetName)$(TargetExt)</OutputFile>
+      <ManifestFile>$(ProjectDir)\Debug\$(TargetName)$(TargetExt).intermediate.manifest</ManifestFile>
+      <ProgramDatabaseFile>$(ProjectDir)\Debug\$(TargetName).pdb</ProgramDatabaseFile>
+      <ProfileGuidedDatabase>$(ProjectDir)\Debug\$(TargetName).pgd</ProfileGuidedDatabase>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>C:\wxWidgets-3.0.2/lib/vc_lib/mswud;C:\wxWidgets-3.0.2/include;C:\wxWidgets-3.0.2/contrib/include;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\include;c:\Program Files (x86)\Microsoft Visual Studio 10.0\vc\include</AdditionalIncludeDirectories>
