Handle connect event correctly

--- a/src/vscp/helperlib/linux/examples/Makefile
+++ b/src/vscp/helperlib/linux/examples/Makefile
@@ -3,10 +3,10 @@ all:	example1 bigtest
 
 
 example1:	example1.c
-	cc example1.c -o example1 -L.. -lvscphelper
+	cc example1.c -o example1 -I../../../common -I../../../../common -L.. -lvscphelper
 
 bigtest:       bigtest.c
-	cc -std=c99 bigtest.c -o bigtest -L.. -lvscphelper
+	cc -std=c99 bigtest.c -o bigtest -I../../../common -I../../../../common -L.. -lvscphelper
 
 clean:
 	rm example1
